# pptx-ea-font

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
pptx_ea_font/: __init__.py
src/pptx_ea_font/: __init__.py
tests/: test.pptx  test_kaiti.pptx  test_set_font.py
